dynamic activity set in subject page

--- a/views/student/student_dashboard.ejs
+++ b/views/student/student_dashboard.ejs
@@ -244,7 +244,7 @@
                         <ul style="list-style: none; padding: 0;">
                             <% subjects.forEach(subject => { %>
                                 <li style="display: flex; align-items: center; gap: 10px;">
-                                    <a href="/student/<%= subject.subjectName.toLowerCase() %>" 
+                                    <a href="/student_dashboard/<%= subject.subjectName.toLowerCase() %>" 
                                        style="display: flex; align-items: center; text-decoration: none; color: black;">
                                         <img src="/graphics/<%= subject.subjectName.toLowerCase() %>.jpg" 
                                              alt="<%= subject.subjectName %>" 
