--- a/views/student/student_dashboard.ejs
+++ b/views/student/student_dashboard.ejs
@@ -342,5 +342,10 @@
     })();
 
     </script>
+
+    <script src="https://cdn.botpress.cloud/webchat/v2.3/inject.js"></script>
+    <script src="https://files.bpcontent.cloud/2025/03/09/15/20250309154125-ROQMQ6F2.js"></script>
+
+
 </body>
 </html>
