inserting file successfully

--- a/views/student/student_activity.ejs
+++ b/views/student/student_activity.ejs
@@ -103,8 +103,8 @@
             <div class="left-section">
                 <h2><i>Activity!</i></h2>
                 <div class="task-card">
-                    <h3><%= assignments.title %></h3>
-                    <p><%= assignments.description %></p>
+                    <h3><%= assignment.title %></h3>
+                    <p><%= assignment.description %></p>
                 </div>
             </div>
         </div>
