--- a/views/student/student_feedback.ejs
+++ b/views/student/student_feedback.ejs
@@ -129,7 +129,7 @@
             window.location.href = "/student_dashboard/<%= subjectName %>";
         });
         document.getElementById("submissions").addEventListener("click", function() {
-            window.location.href = "/student_dashboard/<%= subjectName %>/submission";
+            window.location.href = "/student_dashboard/<%= subjectName %>/activity/submission";
         });
         document.getElementById("feedback").addEventListener("click", function() {
             window.location.href = "/student_dashboard/feedback";
