Updated the pop up message

--- a/views/student/student_dashboard.ejs
+++ b/views/student/student_dashboard.ejs
@@ -275,7 +275,7 @@
                 <div class="prize-text">
                     <% if ((completedAssignments/ totalAssignments)==1) { %>
                         <div id="congrats-popup">
-                            🎉 Yay! You've finished all assignments! Enjoy your reward! 🎁
+                            🎉 Yay! You've finished all assignments! You have unlocked a new video! 🎁
                         </div>
                     <% } else { %>
                         <div class="goal-text">
